# pizip

./: CMakeLists.txt  README.md  gmp-chudnovsky.c  main.cpp
scripts/: download-install-maginatics-threadpool.sh
